@@ -82,6 +82,8 @@ Solaris wasn't setting termios parameters without TCSANOW.  Wheel::Run
 wouldn't work in pty mode because the terminal parameters weren't
 being set.
 
+Make Wheel::Run's pty conduits run in "raw" or cbreak mode.
+
 
 0.1204 2001.01.13
 -----------------
